# Software-Renderer

./: CMakeLists.txt  Camera.cxx  Camera.h  LightingParameters.h  Matrix.cxx  Matrix.h  Screen.cxx  Screen.h  Triangle.cxx  Triangle.h  Vector.cxx  Vector.h  project1F.cxx  reader1F.cxx  reader1F.h
